[gd_scene load_steps=6 format=3 uid="uid://ckjyphuj544pb"]

[ext_resource type="Script" uid="uid://b26jen370eqdk" path="res://scripts/snake.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://cgptno2njjhp2" path="res://ui.gd" id="3_sugp2"]
[ext_resource type="Texture2D" uid="uid://cp3lwad12c6t" path="res://assets/snake_head.png" id="4_5f3k1"]
[ext_resource type="Texture2D" uid="uid://dq0ryv7f6hwwc" path="res://assets/food.png" id="4_tbgi4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snake"]

[node name="Main" type="Node"]

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("1_o5qli")

[node name="SnakeHead" type="Area2D" parent="GameBoard"]

[node name="Sprite2D" type="Sprite2D" parent="GameBoard/SnakeHead"]
texture = ExtResource("4_5f3k1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameBoard/SnakeHead"]
shape = SubResource("RectangleShape2D_snake")

[node name="Food" type="Area2D" parent="GameBoard"]

[node name="Sprite2D" type="Sprite2D" parent="GameBoard/Food"]
texture = ExtResource("4_tbgi4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameBoard/Food"]
shape = SubResource("RectangleShape2D_snake")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_sugp2")

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 16
text = "Score: 0"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
offset_left = 60.0
offset_top = 180.0
offset_right = 260.0
offset_bottom = 300.0

[node name="Label" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 20.0
offset_right = 160.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 20
text = "游戏结束"

[node name="RestartButton" type="Button" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 60.0
offset_right = 150.0
offset_bottom = 90.0
text = "重新开始"

[connection signal="pressed" from="UI/GameOverPanel/RestartButton" to="UI" method="_on_RestartButton_pressed"]
